Update CMakeLists.txt with release optimization builds and upadte window title

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,9 @@ if(EMSCRIPTEN)
     if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
         target_link_options(${MAZE_BUILDER_OUTFILE} PRIVATE "SHELL:-s STACK_OVERFLOW_CHECK=2 -s SAFE_HEAP=2 -s ASSERTIONS=2 -gsource-map")
     endif()
+    if(CMAKE_BUILD_TYPE STREQUAL "Release")
+        target_link_options(${MAZE_BUILDER_OUTFILE} PRIVATE "SHELL:-O3")
+    endif()
 endif()
 
 if(APPLE AND NOT EMSCRIPTEN)
