Update grid_interface and derived class, add distances class, and add distance from cell test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,8 @@ set(MAZE_BUILDER_LIB_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/cell.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/writer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/maze_factory.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/distances.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/sources/distances.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/sources/distance_grid.cpp)
 
 set(CRAFT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/craft.cpp
