Init with dfs code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,8 @@ set(MAZE_BUILDER_LIB_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/maze_factory.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/distances.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/distance_grid.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/colored_grid.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/sources/colored_grid.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/sources/dfs.cpp)
 
 set(CRAFT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/craft.cpp
