Move maze_thread_safe class to mazes namespace, update CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ set(MAZE_BUILDER_LIB_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/grid.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/cell.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/writer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/sources/maze_thread_safe.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/maze_factory.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/distances.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/distance_grid.cpp
@@ -80,8 +81,7 @@ set(CRAFT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/ring.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/sign.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sources/craft_utils.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/world.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/sources/maze_thread_safe.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/sources/world.cpp)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
     message(INFO ": ${CMAKE_BUILD_TYPE} - enabled ${PROJECT_NAME} to use -DMAZE_DEBUG flag.")
