--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,8 +1,12 @@
 
-option(MAZE_BUILD_EXAMPLES "Build ${PROJECT_NAME} examples" OFF)
-if(MAZE_BUILD_EXAMPLES)
-    message(INFO ": Building ${PROJECT_NAME} examples")
+option(MAZE_BUILD_WEB_EXAMPLES "Build ${PROJECT_NAME} examples for the Web!" OFF)
+option(MAZE_BUILD_DESKTOP_EXAMPLES "Build ${PROJECT_NAME} examples for the Desktop!" OFF)
+if(MAZE_BUILD_WEB_EXAMPLES)
+    message(INFO ": Building ${PROJECT_NAME} examples for the Web!")
+    add_subdirectory(Voxels)
+    add_subdirectory(MazeBuilderJS)
+elseif(MAZE_BUILD_DESKTOP_EXAMPLES)
+    message(INFO ": Building ${PROJECT_NAME} examples for the Desktop!")
     add_subdirectory(Voxels)
     add_subdirectory(CLI)
-    add_subdirectory(MazeBuilderJS)
 endif()
