Update CMakeLists languages to add C, update sidewinder algo

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -27,7 +27,7 @@ set(MAZE_BUILDER_LIB_SOURCES
 add_library(${MAZE_BUILDER_LIB}_obj OBJECT ${MAZE_BUILDER_LIB_SOURCES} ${CPP_BASE64_SRCS})
 target_include_directories(${MAZE_BUILDER_LIB}_obj PRIVATE ${CMAKE_SOURCE_DIR}/deps)
 target_compile_features(${MAZE_BUILDER_LIB}_obj PUBLIC cxx_std_17)
-file(GLOB MAZE_BUILDER_HEADERS ${CMAKE_SOURCE_DIR}/include/*.h)
+file(GLOB MAZE_BUILDER_HEADERS ${CMAKE_SOURCE_DIR}/include/MazeBuilder/*.h)
 target_sources(${MAZE_BUILDER_LIB}_obj PUBLIC FILE_SET HEADERS BASE_DIRS "${CMAKE_SOURCE_DIR}/include" FILES ${MAZE_BUILDER_HEADERS})
 set_target_properties(${MAZE_BUILDER_LIB}_obj PROPERTIES POSITION_INDEPENDENT_CODE 1)
 
