--- a/examples/Voxels/CMakeLists.txt
+++ b/examples/Voxels/CMakeLists.txt
@@ -37,30 +37,19 @@ set(CRAFT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/craft_utils.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/world.cpp)
 
-find_package(SDL3 QUIET)
-if(NOT SDL3_FOUND)
-    message(INFO ": Getting SDL via FetchContent")
-    include(FetchContent)
-    FetchContent_Declare(SDL GIT_REPOSITORY https://github.com/libsdl-org/SDL.git GIT_TAG preview-3.1.3)
-    FetchContent_MakeAvailable(SDL)
-    set_property(DIRECTORY "${CMAKE_BINARY_DIR}/_deps/sdl-src" PROPERTY EXCLUDE_FROM_ALL TRUE)
-endif()
-
-set(SDL_SHARED FALSE CACHE BOOL "Build a SDL shared library (if available)")
-set(SDL_STATIC TRUE CACHE BOOL "Build a SDL static library (if available)")
+include(FetchContent)
+function(fetch_git_repo REPO_NAME REPO_URL REPO_TAG)
+    if(NOT EXISTS ${REPO_DIR})
+        message(INFO ": Fetching ${REPO_NAME} from ${REPO_URL}")
+        FetchContent_Declare(${REPO_NAME} GIT_REPOSITORY ${REPO_URL} GIT_TAG ${REPO_TAG} GIT_SHALLOW TRUE GIT_PROGRESS TRUE)
+        FetchContent_MakeAvailable(${REPO_NAME})
+    endif()
+endfunction()
 
 set(VOXELS_EXE "voxels")
-add_executable(${VOXELS_EXE} ${GLAD_SOURCES} ${NOISE_SOURCES} ${SQLITE3_SOURCES} ${DEAR_IMGUI_SOURCES} ${CRAFT_SOURCES})
-target_link_libraries(${VOXELS_EXE} PRIVATE ${CMAKE_THREAD_LIBS_INIT} ${MAZE_BUILDER_LIB}_static SDL3::SDL3)
-target_compile_features(${VOXELS_EXE} PUBLIC cxx_std_17)
-target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps/glad/include)
-target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps)
-target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps/dearimgui)
-target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/include)
-
 # Note that the latest SDL might not be available as an EMSDK port yet
 if(MAZE_BUILD_WEB_EXAMPLES AND EMSCRIPTEN)
-    message(INFO ": Building SDL app for Web!")
+    message(INFO ": Building SDL app for the Web!")
 
     # Check if CMAKE_TOOLCHAIN_FILE is set, throw a fatal error if not
     if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
@@ -69,12 +58,22 @@ if(MAZE_BUILD_WEB_EXAMPLES AND EMSCRIPTEN)
 
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -matomics -mbulk-memory")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -matomics -mbulk-memory")
-
-    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps/emscripten_local)
+    add_executable(${VOXELS_EXE} ${GLAD_SOURCES} ${NOISE_SOURCES} ${SQLITE3_SOURCES} ${DEAR_IMGUI_SOURCES} ${CRAFT_SOURCES})
     set_target_properties(${VOXELS_EXE} PROPERTIES SUFFIX ".html" LINK_FLAGS "-lembind")
+
+    set(SDL_STATIC TRUE CACHE BOOL "Build a SDL static library (if available)")
+    fetch_git_repo(SDL https://github.com/libsdl-org/SDL.git preview-3.1.3)
+
+    target_link_libraries(${VOXELS_EXE} PRIVATE ${CMAKE_THREAD_LIBS_INIT} ${MAZE_BUILDER_LIB}_static SDL3::SDL3)
+    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps/emscripten_local)
+    target_compile_features(${VOXELS_EXE} PUBLIC cxx_std_17)
+    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps/glad/include)
+    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps)
+    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps/dearimgui)
+    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/include)
     
     target_link_options(${VOXELS_EXE} PRIVATE
-    	"SHELL:-s PTHREAD_POOL_SIZE=6 -s PTHREAD_POOL_SIZE_STRICT=2 -s WASM=1 -s USE_PTHREADS=1 -s ALLOW_MEMORY_GROWTH=1 -s STACK_SIZE=323232"
+    	"SHELL:-s PTHREAD_POOL_SIZE=4 -s PTHREAD_POOL_SIZE_STRICT=2 -s WASM=1 -s USE_PTHREADS=1 -s ALLOW_MEMORY_GROWTH=1 -s STACK_SIZE=323232"
         "SHELL:-s FULL_ES3=1 -s MAX_WEBGL_VERSION=2 -s MODULARIZE=1 -s EXPORT_ES6=1 -s ASYNCIFY"
         "SHELL:--shell-file ${CMAKE_SOURCE_DIR}/deps/emscripten_local/shell_minimal.html"
         "SHELL:--preload-file ${CMAKE_SOURCE_DIR}/shaders/es/block_vertex.es.glsl@/shaders/es/block_vertex.es.glsl"
@@ -97,6 +96,25 @@ if(MAZE_BUILD_WEB_EXAMPLES AND EMSCRIPTEN)
     if(CMAKE_BUILD_TYPE STREQUAL "Release")
         target_link_options(${VOXELS_EXE} PRIVATE "SHELL:-O3")
     endif()
+elseif(MAZE_BUILDER_WEB_EXAMPLES)
+    message(INFO ": Building SDL app for the Desktop!")
+    find_package(SDL3 QUIET)
+    if(NOT SDL3_FOUND)
+        message(INFO ": Getting SDL via FetchContent")
+        set(SDL_SHARED TRUE CACHE BOOL "Build a SDL shared library (if available)")
+        set(SDL_STATIC FALSE CACHE BOOL "Build a SDL static library (if available)")
+        fetch_git_repo(SDL https://github.com/libsdl-org/SDL.git preview-3.1.3)
+        set_property(DIRECTORY "${CMAKE_BINARY_DIR}/_deps/sdl-src" PROPERTY EXCLUDE_FROM_ALL TRUE)
+    endif()
+
+    add_executable(${VOXELS_EXE} ${GLAD_SOURCES} ${NOISE_SOURCES} ${SQLITE3_SOURCES} ${DEAR_IMGUI_SOURCES} ${CRAFT_SOURCES})
+    target_link_libraries(${VOXELS_EXE} PRIVATE ${CMAKE_THREAD_LIBS_INIT} SDL3::SDL3)
+    target_compile_features(${VOXELS_EXE} PUBLIC cxx_std_17)
+    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps/glad/include)
+    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps)
+    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps/dearimgui)
+    target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+
 endif(MAZE_BUILD_WEB_EXAMPLES AND EMSCRIPTEN)
 
 file(COPY "${CMAKE_SOURCE_DIR}/shaders" DESTINATION "${CMAKE_BINARY_DIR}/bin/Voxels")
