Update GH actions, update CLI example for changes to args to fix ubuntu build errors

--- a/examples/CLI/CMakeLists.txt
+++ b/examples/CLI/CMakeLists.txt
@@ -3,3 +3,4 @@
 set(MAZE_BUILDER_EXE "maze_builder")
 add_executable(${MAZE_BUILDER_EXE} main.cpp)
 target_link_libraries(${MAZE_BUILDER_EXE} ${MAZE_BUILDER_LIB}_static)
+target_include_directories(${MAZE_BUILDER_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/include)
