--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -44,7 +44,7 @@ jobs:
 
     # Configure CMake with Emscripten toolchain
     - name: Configure CMake for Emscripten
-      run: cmake -B ${{github.workspace}}/build-emscripten -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/emsdk/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake
+      run: cmake -B ${{github.workspace}}/build-emscripten -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/emsdk/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake -DMAZE_BUILD_WEB_EXAMPLES=ON
 
     # Build with Emscripten
     - name: Build with Emscripten
@@ -52,7 +52,7 @@ jobs:
 
 # Configure CMake for default build (without Emscripten)
     - name: Configure CMake for Default Build
-      run: cmake -B ${{github.workspace}}/build-default -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build-default -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DMAZE_BUILD_DESKTOP_EXAMPLES=ON
 
     - name: Build Default
       run: cmake --build ${{github.workspace}}/build-default --config ${{env.BUILD_TYPE}}
