Add framework for Http example and perform sanity-check

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,4 +13,5 @@ elseif(MAZE_BUILD_DESKTOP_EXAMPLES)
     message(INFO ": Building ${PROJECT_NAME} examples for the Desktop!")
     add_subdirectory(Voxels)
     add_subdirectory(CLI)
+    add_subdirectory(Http)
 endif()
