Update CMakeLists to fix spelling error in desktop examples voxel app build, update GH actions

--- a/examples/Voxels/CMakeLists.txt
+++ b/examples/Voxels/CMakeLists.txt
@@ -96,7 +96,7 @@ if(MAZE_BUILD_WEB_EXAMPLES AND EMSCRIPTEN)
     if(CMAKE_BUILD_TYPE STREQUAL "Release")
         target_link_options(${VOXELS_EXE} PRIVATE "SHELL:-O3")
     endif()
-elseif(MAZE_BUILDER_WEB_EXAMPLES)
+elseif(MAZE_BUILD_DESKTOP_EXAMPLES)
     message(INFO ": Building SDL app for the Desktop!")
     find_package(SDL3 QUIET)
     if(NOT SDL3_FOUND)
@@ -108,7 +108,7 @@ elseif(MAZE_BUILDER_WEB_EXAMPLES)
     endif()
 
     add_executable(${VOXELS_EXE} ${GLAD_SOURCES} ${NOISE_SOURCES} ${SQLITE3_SOURCES} ${DEAR_IMGUI_SOURCES} ${CRAFT_SOURCES})
-    target_link_libraries(${VOXELS_EXE} PRIVATE ${CMAKE_THREAD_LIBS_INIT} SDL3::SDL3)
+    target_link_libraries(${VOXELS_EXE} PRIVATE ${CMAKE_THREAD_LIBS_INIT} ${MAZE_BUILDER_LIB}_static SDL3::SDL3)
     target_compile_features(${VOXELS_EXE} PUBLIC cxx_std_17)
     target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps/glad/include)
     target_include_directories(${VOXELS_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps)
