--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -25,7 +25,8 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y mesa-common-dev mesa-utils libglu1-mesa-dev libvulkan-dev libxinerama-dev libxcursor-dev libxi-dev libxrandr-dev doxygen
+        sudo apt-get install -y mesa-common-dev mesa-utils libgl1-mesa-dev libx11-dev libxinerama-dev libxcursor-dev libxi-dev libxrandr-dev doxygen
+        sudo apt-get install -y libfreetype6-dev libudev-dev libopenal-dev libflac-dev libogg-dev libvorbis-dev
 
     # Step to download Emsdk
     - name: Download Emsdk
