Add json writer dep, update maze_builder_network example to have dev and local urls

--- a/examples/Http/CMakeLists.txt
+++ b/examples/Http/CMakeLists.txt
@@ -4,7 +4,12 @@ set(MAZE_BUILDER_EXE "maze_builder_network")
 add_executable(${MAZE_BUILDER_EXE} main.cpp)
 target_link_libraries(${MAZE_BUILDER_EXE} PRIVATE ${MAZE_BUILDER_LIB}_static)
 target_include_directories(${MAZE_BUILDER_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(${MAZE_BUILDER_EXE} PRIVATE ${CMAKE_SOURCE_DIR}/deps)
 target_compile_features(${MAZE_BUILDER_EXE} PUBLIC cxx_std_17)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+    message(INFO ": ${CMAKE_BUILD_TYPE} - enabled ${PROJECT_NAME} to use -DMAZE_DEBUG flag.")
+    target_compile_definitions(${MAZE_BUILDER_EXE} PRIVATE "MAZE_DEBUG")
+endif()
 
 # Get SFML from the web
 message(INFO ": Fetching SFML from https://github.com/SFML/SFML.git")
